force-app/main/default/objects/User/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cargo</valueSetName>
    </valueSet>
</CustomField>