force-app/main/default/objects/User/fields/Coordenador__c.field-meta.xml
<CustomField>
    <fullName>Coordenador__c</fullName>
    <label>Coordenador</label>
    <relationshipName>HierarquiaCoordenador</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>