force-app/main/default/objects/User/fields/Reportase__c.field-meta.xml
<CustomField>
    <fullName>Reportase__c</fullName>
    <label>Reporta-se à</label>
    <relationshipName>HierarquiaCargo</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>