force-app/main/default/objects/User/fields/Situacao__c.field-meta.xml
<CustomField>
    <fullName>Situacao__c</fullName>
    <defaultValue>&apos;Offline&apos;</defaultValue>
    <label>Situação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SituacoesParticipantes</valueSetName>
    </valueSet>
</CustomField>