force-app/main/default/objects/User/listViews/LicencaSalesforceAdmin.listView-meta.xml
<ListView>
    <fullName>LicencaSalesforceAdmin</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Administrador do sistema</value>
    </filters>
    <label>Licença Salesforce (Admin)</label>
</ListView>